# vkvk

./: .gitignore  Cargo.toml  README.md  crates.js  notes.xml  rustfmt.toml  search-index.js  settings.html  source-files.js  tmp.txt  vk-1.2.167.xml  vk.xml.working
chlorine/: all.html  enum.c_void.html  index.html  macro.pick.html  sidebar-items.js  type.c_char.html  type.c_double.html  type.c_float.html  type.c_int.html  type.c_long.html  type.c_longlong.html  type.c_schar.html  type.c_short.html  type.c_uchar.html  type.c_uint.html  type.c_ulong.html  type.c_ulonglong.html  type.c_ushort.html
examples/: demo.rs  extractor.rs  fermium_create_instance.rs
generator/: Cargo.toml
src/: _1_0.rs  bitmask.rs  dynamic_link.rs  enumeration.rs  enumerations.rs  flag_bits.rs  fn_managers.rs  fn_managers_rusty.rs  fn_ptr.rs  fn_types.rs  handle.rs  handles.rs  lib.rs  macros.rs  managers.rs  non_dispatchable_handles.rs  prelude.rs  structure.rs  structures.rs  type_entry.rs  types_entry.rs  unionize.rs  unions.rs  vk_bool.rs  vk_platform.rs  vk_result.rs  vk_structure_type.rs  vk_version.rs  xml.rs
vkvk/: all.html  constant.VK_ACCESS_ACCELERATION_STRUCTURE_READ_BIT_KHR.html  constant.VK_ACCESS_ACCELERATION_STRUCTURE_READ_BIT_NV.html  constant.VK_ACCESS_ACCELERATION_STRUCTURE_WRITE_BIT_KHR.html  constant.VK_ACCESS_ACCELERATION_STRUCTURE_WRITE_BIT_NV.html  constant.VK_ACCESS_COLOR_ATTACHMENT_READ_BIT.html  constant.VK_ACCESS_COLOR_ATTACHMENT_READ_NONCOHERENT_BIT_EXT.html  constant.VK_ACCESS_COLOR_ATTACHMENT_WRITE_BIT.html  constant.VK_ACCESS_COMMAND_PREPROCESS_READ_BIT_NV.html  constant.VK_ACCESS_COMMAND_PREPROCESS_WRITE_BIT_NV.html  constant.VK_ACCESS_CONDITIONAL_RENDERING_READ_BIT_EXT.html  constant.VK_ACCESS_DEPTH_STENCIL_ATTACHMENT_READ_BIT.html  constant.VK_ACCESS_NONE_KHR.html  (+157 more)
(+6641 files in other folders)
