[package]
name = "vkvk"
description = "Vulkan bindings. Don't use this, use `ash` instead."
repository = "https://github.com/Lokathor/vkvk"
version = "0.0.1-alpha"
authors = ["Lokathor <zefria@gmail.com>"]
edition = "2018"
license = "Zlib OR Apache-2.0 OR MIT"

[dependencies]
chlorine = "1"

[dev-dependencies]
fermium = { version = "20014.2", features = ["experimental_fast_build"] }

[features]
default = ["alloc", "impl_enumeration_precise_debug", "impl_flag_bits_precise_debug"]
alloc = []
impl_enumeration_precise_debug = []
impl_flag_bits_precise_debug = []
